--- a/BotDetectionProject/bot_detection/templates/bot_detection/index.html
+++ b/BotDetectionProject/bot_detection/templates/bot_detection/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intel Gen AI</title>
+    <head>
+        <title>Intel Gen AI</title>
+    </head>
+    
     <title>Bot Detection System</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
@@ -79,8 +82,11 @@
     </style>
 </head>
 <body>
-    <h1>Bot Detection in Progress...you can freely use this website until suspicious activity detected</h1>
-
+    <h1>Bot Detection in Progress...
+    
+        you can freely use this website until suspicious activity detected</h1>
+    
+    
     
     <div id="captcha" style="display:none;">
         <p>We suspect you're a bot! Please complete the CAPTCHA:</p>
